--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ packages = [
 
 [tool.poetry.dependencies]
 python = ">=3.11,<3.14"
-unstructured = {extras = ["local-inference"], version = ">=0.18.14,<0.19.0"}
+unstructured = {extras = ["local-inference"], version = "^0.18.14"}
 sentence-transformers = ">=5.1.0,<6.0.0"
 scikit-learn = ">=1.7.1,<2.0.0"
 torch = ">=2.8.0,<3.0.0"
