--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "AI-ready data pre-processing for Airbyte."
 authors = ["Kai <ngominhkhoa2006@gmail.com>"]
 readme = "README.md"
 packages = [
-    {include = "cortex-service"}
+    {include = "cortex_service"}
 ]
 
 [tool.poetry.dependencies]
@@ -19,6 +19,12 @@ fastapi = ">=0.116.1,<0.117.0"
 uvicorn = ">=0.35.0,<0.36.0"
 pydantic = {extras = ["email"], version = ">=2.11.7,<3.0.0"}
 python-dotenv = ">=1.1.1,<2.0.0"
+prometheus-fastapi-instrumentator = "^7.1.0"
+python-json-logger = "^3.3.0"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.4.1"
+httpx = "^0.28.1"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
