--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,10 +21,13 @@ pydantic = {extras = ["email"], version = ">=2.11.7,<3.0.0"}
 python-dotenv = ">=1.1.1,<2.0.0"
 prometheus-fastapi-instrumentator = "^7.1.0"
 python-json-logger = "^3.3.0"
+requests = "^2.32.5"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.4.1"
 httpx = "^0.28.1"
+ruff = "^0.12.11"
+mypy = "^1.17.1"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
