feat(docker): ✨ fix dockerfile and compose issues, and update json output

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,11 @@
-CORTEX_API_KEY=your-secret-key-here
+# API Configuration
+CORTEX_API_KEY=your-secret-api-key-here
+
+# Hugging Face Configuration (Optional - only needed for private models)
+# HUGGINGFACE_HUB_TOKEN=your-hf-token-here
+
+# Model Configuration (Optional - defaults to all-MiniLM-L6-v2)
+# SENTENCE_TRANSFORMER_MODEL=all-MiniLM-L6-v2
+
+# Logging Configuration (Optional)
+# LOG_LEVEL=INFO
